--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
