--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@radix-ui/themes": "^3.2.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
